--- a/blog.html
+++ b/blog.html
@@ -29,10 +29,10 @@
 
 
     <!--== CSS fayls  ==-->
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/blog.css">
-    <link rel="stylesheet" href="../css/crumbs.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="./css/crumbs.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -96,7 +96,7 @@
     <section id="meniu-bar" class="sticky-menu">
         <div class="meniu-nav">
             <div class="logo">
-                <a href="../html/index.html"><img src="../img/logo.png" alt="">
+                <a href="./index.html"><img src="./img/logo.png" alt="">
                     <span>PathSoft</span>
                 </a>
             </div>
@@ -104,43 +104,43 @@
             <div class="meniu-item">
                 <ul>
                     <li>
-                        <a href="../html/index.html" class="menu-list-to" data-title="Home">
+                        <a href="./index.html" class="menu-list-to" data-title="Home">
                             <span data-title="Home"> Home</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/about.html" class="menu-list-to" data-title="About Us">
+                        <a href="./about.html" class="menu-list-to" data-title="About Us">
                             <span data-title="About Us">About Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/services.html" class="menu-list-to" data-title="Services">
+                        <a href="./services.html" class="menu-list-to" data-title="Services">
                             <span data-title="Services"> Services</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/blog.html" class="menu-list-to" data-title="News">
+                        <a href="./blog.html" class="menu-list-to" data-title="News">
                             <span data-title="News">News </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/gallery.html" class="menu-list-to" data-title="Gallery">
+                        <a href="./gallery.html" class="menu-list-to" data-title="Gallery">
                             <span data-title="Gallery">Gallery </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/contact.html" class="menu-list-to" data-title="Contact Us">
+                        <a href="./contact.html" class="menu-list-to" data-title="Contact Us">
                             <span data-title="Contact Us">Contact Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/login.html" class="menu-list-to" data-title="Login">
+                        <a href="./login.html" class="menu-list-to" data-title="Login">
                             <span data-title="Login"> Login</span>
                             <i class=""></i>
                         </a>
@@ -168,7 +168,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-auto">
                     <div class="crumbs-info">
-                        <span class="crumbs-home"><a href="../html/index.html">Home</a></span> <i
+                        <span class="crumbs-home"><a href="./index.html">Home</a></span> <i
                             class="fas fa-angle-right"></i>
                         <span class="crumbs-about">News</span>
                     </div>
@@ -192,11 +192,11 @@
                     </div>
                     <div class="blog-list">
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-2.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-2.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Benefits of Async/Await in
+                                    <a href="./blogitem.html"><span>Benefits of Async/Await in
                                             Programming</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
@@ -209,7 +209,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -219,11 +219,11 @@
                             </div>
                         </div>
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-1.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-1.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Key Considerations Of IPaaS</span></a>
+                                    <a href="./blogitem.html"><span>Key Considerations Of IPaaS</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
                                     <div class="news-blog-item-row-date"> <span>Jan 23, 2020 </span></div>
@@ -235,7 +235,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -245,11 +245,11 @@
                             </div>
                         </div>
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-3.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-3.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Hibernate Query Language</span></a>
+                                    <a href="./blogitem.html"><span>Hibernate Query Language</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
                                     <div class="news-blog-item-row-date"> <span>Jan 23, 2020 </span></div>
@@ -261,7 +261,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -271,11 +271,11 @@
                             </div>
                         </div>
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-2.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-2.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Benefits of Async/Await in
+                                    <a href="./blogitem.html"><span>Benefits of Async/Await in
                                             Programming</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
@@ -288,7 +288,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -298,11 +298,11 @@
                             </div>
                         </div>
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-1.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-1.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Key Considerations Of IPaaS</span></a>
+                                    <a href="./blogitem.html"><span>Key Considerations Of IPaaS</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
                                     <div class="news-blog-item-row-date"> <span>Jan 23, 2020 </span></div>
@@ -314,7 +314,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -324,11 +324,11 @@
                             </div>
                         </div>
                         <div class="news-blog-item col-margin">
-                            <a href="../html/blogitem.html" class="news-blog-item-img img-style"><img
-                                    src="../img/news-img-3.jpg"></a>
+                            <a href="./blogitem.html" class="news-blog-item-img img-style"><img
+                                    src="./img/news-img-3.jpg"></a>
                             <div class="news-blog-item-info">
                                 <h4 class="news-blog-item-title">
-                                    <a href="../html/blogitem.html"><span>Hibernate Query Language</span></a>
+                                    <a href="./blogitem.html"><span>Hibernate Query Language</span></a>
                                 </h4>
                                 <div class="news-blog-item-row">
                                     <div class="news-blog-item-row-date"> <span>Jan 23, 2020 </span></div>
@@ -340,7 +340,7 @@
                                         so beguiled and demoralized by the charms of pleasure of the moment...</p>
                                 </div>
                                 <div class="news-blog-item-more">
-                                    <a href="../html/blogitem.html">
+                                    <a href="./blogitem.html">
                                         <span>Read more</span>
                                         <i class="material-icons"> east</i>
                                     </a>
@@ -402,7 +402,7 @@
                                 <li>
                                     <a href="#!" class="sidebar-recent-post">
                                         <div class="sidebar-recent-post-img img-style">
-                                            <img class="lazy" src="../img/news-img-2.jpg" alt="">
+                                            <img class="lazy" src="./img/news-img-2.jpg" alt="">
                                         </div>
                                         <div class="sidebar-recent-post-title">Benefits of Async/Await in Programming
                                         </div>
@@ -411,7 +411,7 @@
                                 <li>
                                     <a href="#!" class="sidebar-recent-post">
                                         <div class="sidebar-recent-post-img img-style">
-                                            <img class="lazy" src="../img/news-img-2.jpg" alt="">
+                                            <img class="lazy" src="./img/news-img-2.jpg" alt="">
                                         </div>
                                         <div class="sidebar-recent-post-title">Key Considerations and Warnings of iPaaS
                                         </div>
@@ -420,7 +420,7 @@
                                 <li>
                                     <a href="#!" class="sidebar-recent-post">
                                         <div class="sidebar-recent-post-img img-style">
-                                            <img class="lazy" src="../img/news-img-2.jpg" alt="">
+                                            <img class="lazy" src="./img/news-img-2.jpg" alt="">
                                         </div>
                                         <div class="sidebar-recent-post-title">Usage of Hibernate Query Language</div>
                                     </a>
@@ -473,7 +473,7 @@
                 <div class="col-4">
                     <div class="footer-item">
                         <div class="logo">
-                            <a href="../html/index.html"><img src="../img/logo.png" alt="LOGO PathSoft">
+                            <a href="./index.html"><img src="./img/logo.png" alt="LOGO PathSoft">
                                 <span><b>PathSoft</b></span></a>
                         </div>
                         <div class="company-info">
@@ -501,28 +501,28 @@
                         <h4>Menu</h4>
                         <ul class="company-footer-meniu">
                             <li>
-                                <a href="../html/about.html" class="menu-list-to footer-list-to" data-title="About Us">
+                                <a href="./about.html" class="menu-list-to footer-list-to" data-title="About Us">
                                     <span data-title="About Us"> About Us</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/services.html" class="menu-list-to footer-list-to"
+                                <a href="./services.html" class="menu-list-to footer-list-to"
                                     data-title="Services">
                                     <span data-title="Services"> Services</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
+                                <a href="./team.html" class="menu-list-to footer-list-to" data-title="Our Team">
                                     <span data-title="Our Team"> Our Team</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/blog.html" class="menu-list-to footer-list-to" data-title="News">
+                                <a href="./blog.html" class="menu-list-to footer-list-to" data-title="News">
                                     <span data-title="News"> News</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/contact.html" class="menu-list-to footer-list-to"
+                                <a href="./contact.html" class="menu-list-to footer-list-to"
                                     data-title="Contact Us">
                                     <span data-title="Contact Us"> Contact Us</span>
                                 </a>
