--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 
     <!--== CSS fayls  ==-->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/animation.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animation.css">
 
 </head>
 
@@ -94,7 +94,7 @@
     <section id="meniu-bar" class="sticky-menu">
         <div class="meniu-nav">
             <div class="logo">
-                <a href="../html/index.html"><img src="../img/logo.png" alt="">
+                <a href="/index.html"><img src="./img/logo.png" alt="">
                     <span>PathSoft</span>
                 </a>
             </div>
@@ -102,43 +102,43 @@
             <div class="meniu-item">
                 <ul>
                     <li>
-                        <a href="../html/index.html" class="menu-list-to" data-title="Home">
+                        <a href="/index.html" class="menu-list-to" data-title="Home">
                             <span data-title="Home"> Home</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/about.html" class="menu-list-to" data-title="About Us">
+                        <a href="/about.html" class="menu-list-to" data-title="About Us">
                             <span data-title="About Us">About Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/services.html" class="menu-list-to" data-title="Services">
+                        <a href="/services.html" class="menu-list-to" data-title="Services">
                             <span data-title="Services"> Services</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/blog.html" class="menu-list-to" data-title="News">
+                        <a href="/blog.html" class="menu-list-to" data-title="News">
                             <span data-title="News">News </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/gallery.html" class="menu-list-to" data-title="Gallery">
+                        <a href="/gallery.html" class="menu-list-to" data-title="Gallery">
                             <span data-title="Gallery">Gallery </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/contact.html" class="menu-list-to" data-title="Contact Us">
+                        <a href="/contact.html" class="menu-list-to" data-title="Contact Us">
                             <span data-title="Contact Us">Contact Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/login.html" class="menu-list-to" data-title="Login">
+                        <a href="/login.html" class="menu-list-to" data-title="Login">
                             <span data-title="Login"> Login</span>
                             <i class=""></i>
                         </a>
@@ -176,7 +176,7 @@
         </div>
         <div class="carousel-inner ">
             <div class="carousel-item  active ">
-                <img src="../img/intro-img1.png" alt="intro_img1">
+                <img src="./img/intro-img1.png" alt="intro_img1">
                 <div class="carousel-caption d-none d-md-block textposition">
                     <h1>IT Solution for Your Business</h1>
                     <p>The template you will be able to create a site for your business. The template has many different
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="carousel-item  ">
-                <img src="../img/intro-img2.png" alt="">
+                <img src="./img/intro-img2.png" alt="">
                 <div class="carousel-caption d-none d-md-block textposition">
                     <h1>IT Solution for Your Business</h1>
                     <p>Since our establishment, we have been delivering high-quality and sustainable software solutions
@@ -194,7 +194,7 @@
                 </div>
             </div>
             <div class="carousel-item  ">
-                <img src="../img/intro-img3.png" alt="">
+                <img src="./img/intro-img3.png" alt="">
                 <div class="carousel-caption d-none d-md-block textposition">
                     <h1>IT Solution for Your Business</h1>
                     <p>The template you will be able to create a site for your business. The template has many different
@@ -272,7 +272,7 @@
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="bttn-row">
-                        <a href="../html/services.html">
+                        <a href="/services.html">
                             <div class="bttn">
                                 <span>See All Services</span>
                                 <i class="material-icons">east</i>
@@ -447,7 +447,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/1.jpg" alt="">
+                            <img src="./img/1.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -469,7 +469,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/2.jpg" alt="">
+                            <img src="./img/2.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -491,7 +491,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/3.jpg" alt="">
+                            <img src="./img/3.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -512,7 +512,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/4.jpg" alt="">
+                            <img src="./img/4.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -534,7 +534,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/5.jpg" alt="">
+                            <img src="./img/5.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -556,7 +556,7 @@
                 <div class="col-4 col-margin animation">
                     <div class="project-item">
                         <div class="project-item-card front">
-                            <img src="../img/6.jpg" alt="">
+                            <img src="./img/6.jpg" alt="">
                         </div>
                         <div class="project-item-card back">
                             <div class="project-item-card-center">
@@ -607,7 +607,7 @@
             <div class="row justify-content-center">
                 <div class="col-3 team-box teambox ">
                     <div class="team-item">
-                        <div class="team-img"><img src="../img/team-img-1.jpg" alt=""></div>
+                        <div class="team-img"><img src="./img/team-img-1.jpg" alt=""></div>
                         <div class="team-con">
                             <ul class="team-social-media">
                                 <li>
@@ -636,7 +636,7 @@
                 </div>
                 <div class="col-3 team-box teambox">
                     <div class="team-item">
-                        <div class="team-img"><img src="../img/team-img-2.jpg" alt=""></div>
+                        <div class="team-img"><img src="./img/team-img-2.jpg" alt=""></div>
                         <div class="team-con">
                             <ul class="team-social-media">
                                 <li>
@@ -665,7 +665,7 @@
                 </div>
                 <div class="col-3 team-box teambox">
                     <div class="team-item">
-                        <div class="team-img"><img src="../img/team-img-3.jpg" alt=""></div>
+                        <div class="team-img"><img src="./img/team-img-3.jpg" alt=""></div>
                         <div class="team-con">
                             <ul class="team-social-media">
                                 <li>
@@ -694,7 +694,7 @@
                 </div>
                 <div class="col-3 team-box  teambox">
                     <div class="team-item">
-                        <div class="team-img"><img src="../img/team-img-4.jpg" alt=""></div>
+                        <div class="team-img"><img src="./img/team-img-4.jpg" alt=""></div>
                         <div class="team-con">
                             <ul class="team-social-media">
                                 <li>
@@ -725,7 +725,7 @@
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="bttn-row">
-                        <a href="../html/team.html">
+                        <a href="/team.html">
                             <div class="bttn">
                                 <span>See All Team</span>
                                 <i class="material-icons"> east</i>
@@ -754,7 +754,7 @@
                 <div class="col-4 team-box clientbox">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-1.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-1.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Catherine Williams</h4>
                                 <p>Regular client</p>
@@ -769,7 +769,7 @@
                 <div class="col-4 team-box clientbox">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-2.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-2.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Rupert Wood</h4>
                                 <p>Regular client</p>
@@ -785,7 +785,7 @@
                 <div class="col-4 team-box clientbox">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-3.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-3.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Samantha Brown</h4>
                                 <p>Regular client</p>
@@ -802,7 +802,7 @@
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="bttn-row">
-                        <a href="../html/testimonials.html">
+                        <a href="/testimonials.html">
                             <div class="bttn">
                                 <span>See All Reviwes</span>
                                 <i class="material-icons"> east</i>
@@ -830,7 +830,7 @@
                 <div class="col-4 newsbox">
                     <div class="news-item">
                         <a href="#" class="news-img">
-                            <img src="../img/news-img-1.jpg" alt="">
+                            <img src="./img/news-img-1.jpg" alt="">
                         </a>
                         <div class="news-info">
                             <div class="news-day">
@@ -850,7 +850,7 @@
                 <div class="col-4 newsbox">
                     <div class="news-item">
                         <a href="#" class="news-img">
-                            <img src="../img/news-img-2.jpg" alt="">
+                            <img src="./img/news-img-2.jpg" alt="">
                         </a>
                         <div class="news-info">
                             <div class="news-day">
@@ -870,7 +870,7 @@
                 <div class="col-4 newsbox">
                     <div class="news-item">
                         <a href="#!" class="news-img">
-                            <img src="../img/news-img-3.jpg" alt="">
+                            <img src="./img/news-img-3.jpg" alt="">
                         </a>
                         <div class="news-info">
                             <div class="news-day">
@@ -891,7 +891,7 @@
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="bttn-row">
-                        <a href="../html/blog.html">
+                        <a href="/blog.html">
                             <div class="bttn">
                                 <span>See All Reviwes</span>
                                 <i class="material-icons"> east</i>
@@ -912,7 +912,7 @@
                 <div class="col-4">
                     <div class="footer-item">
                         <div class="logo">
-                            <a href="../html/index.html"><img src="../img/logo.png" alt="LOGO PathSoft">
+                            <a href="/index.html"><img src="./img/logo.png" alt="LOGO PathSoft">
                                 <span><b>PathSoft</b></span></a>
                         </div>
                         <div class="company-info">
@@ -940,28 +940,28 @@
                         <h4>Menu</h4>
                         <ul class="company-footer-meniu">
                             <li>
-                                <a href="../html/about.html" class="menu-list-to footer-list-to" data-title="About Us">
+                                <a href="/about.html" class="menu-list-to footer-list-to" data-title="About Us">
                                     <span data-title="About Us"> About Us</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/services.html" class="menu-list-to footer-list-to"
+                                <a href="/services.html" class="menu-list-to footer-list-to"
                                     data-title="Services">
                                     <span data-title="Services"> Services</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
+                                <a href="/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
                                     <span data-title="Our Team"> Our Team</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/blog.html" class="menu-list-to footer-list-to" data-title="News">
+                                <a href="/blog.html" class="menu-list-to footer-list-to" data-title="News">
                                     <span data-title="News"> News</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/contact.html" class="menu-list-to footer-list-to"
+                                <a href="/contact.html" class="menu-list-to footer-list-to"
                                     data-title="Contact Us">
                                     <span data-title="Contact Us"> Contact Us</span>
                                 </a>
@@ -1070,7 +1070,7 @@
 
 
 
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!--== Optional JavaScript ==-->
     <!--== jQuery first, then Popper.js, then Bootstrap JS ==-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
