--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
 
 
     <!--== CSS fayls  ==-->
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/animation.css">
-    <link rel="stylesheet" href="../css/crumbs.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/crumbs.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -96,7 +96,7 @@
     <section id="meniu-bar" class="sticky-menu">
         <div class="meniu-nav">
             <div class="logo">
-                <a href="../html/index.html"><img src="../img/logo.png" alt="">
+                <a href="./index.html"><img src="./img/logo.png" alt="">
                     <span>PathSoft</span>
                 </a>
             </div>
@@ -104,43 +104,43 @@
             <div class="meniu-item">
                 <ul>
                     <li>
-                        <a href="../html/index.html" class="menu-list-to" data-title="Home">
+                        <a href="./index.html" class="menu-list-to" data-title="Home">
                             <span data-title="Home"> Home</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/about.html" class="menu-list-to" data-title="About Us">
+                        <a href="./about.html" class="menu-list-to" data-title="About Us">
                             <span data-title="About Us">About Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/services.html" class="menu-list-to" data-title="Services">
+                        <a href="./services.html" class="menu-list-to" data-title="Services">
                             <span data-title="Services"> Services</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/blog.html" class="menu-list-to" data-title="News">
+                        <a href="./blog.html" class="menu-list-to" data-title="News">
                             <span data-title="News">News </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/gallery.html" class="menu-list-to" data-title="Gallery">
+                        <a href="./gallery.html" class="menu-list-to" data-title="Gallery">
                             <span data-title="Gallery">Gallery </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/contact.html" class="menu-list-to" data-title="Contact Us">
+                        <a href="./contact.html" class="menu-list-to" data-title="Contact Us">
                             <span data-title="Contact Us">Contact Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/login.html" class="menu-list-to" data-title="Login">
+                        <a href="./login.html" class="menu-list-to" data-title="Login">
                             <span data-title="Login"> Login</span>
                             <i class=""></i>
                         </a>
@@ -167,7 +167,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-auto">
                     <div class="crumbs-info">
-                        <span class="crumbs-home"><a href="../html/index.html">Home</a></span> <i
+                        <span class="crumbs-home"><a href="./index.html">Home</a></span> <i
                             class="fas fa-angle-right"></i>
                         <span class="crumbs-about">About us</span>
                     </div>
@@ -193,7 +193,7 @@
                 <div class="col-12">
                     <div class="about-item">
                         <div class="about-img">
-                            <img src="../img/about-img.jpg" alt="">
+                            <img src="./img/about-img.jpg" alt="">
                         </div>
                         <h2>Developing High-quality Apps</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -339,42 +339,42 @@
             <div class="row">
                 <div class="col-3  animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum1.png" alt="">
+                        <img src="./img/costum1.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum2.png" alt="">
+                        <img src="./img/costum2.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum3.png" alt="">
+                        <img src="./img/costum3.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum4.png" alt="">
+                        <img src="./img/costum4.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum5.png" alt="">
+                        <img src="./img/costum5.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum6.png" alt="">
+                        <img src="./img/costum6.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum7.png" alt="">
+                        <img src="./img/costum7.png" alt="">
                     </div>
                 </div>
                 <div class="col-3 animation col-margin">
                     <div class="customers-item">
-                        <img src="../img/costum8.png" alt="">
+                        <img src="./img/costum8.png" alt="">
                     </div>
                 </div>
             </div>
@@ -389,7 +389,7 @@
                 <div class="col-4">
                     <div class="footer-item">
                         <div class="logo">
-                            <a href="../html/index.html"><img src="../img/logo.png" alt="LOGO PathSoft">
+                            <a href="./index.html"><img src="./img/logo.png" alt="LOGO PathSoft">
                                 <span><b>PathSoft</b></span></a>
                         </div>
                         <div class="company-info">
@@ -417,28 +417,28 @@
                         <h4>Menu</h4>
                         <ul class="company-footer-meniu">
                             <li>
-                                <a href="../html/about.html" class="menu-list-to footer-list-to" data-title="About Us">
+                                <a href="./about.html" class="menu-list-to footer-list-to" data-title="About Us">
                                     <span data-title="About Us"> About Us</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/services.html" class="menu-list-to footer-list-to"
+                                <a href="./services.html" class="menu-list-to footer-list-to"
                                     data-title="Services">
                                     <span data-title="Services"> Services</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
+                                <a href="./team.html" class="menu-list-to footer-list-to" data-title="Our Team">
                                     <span data-title="Our Team"> Our Team</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/blog.html" class="menu-list-to footer-list-to" data-title="News">
+                                <a href="./blog.html" class="menu-list-to footer-list-to" data-title="News">
                                     <span data-title="News"> News</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/contact.html" class="menu-list-to footer-list-to"
+                                <a href="./contact.html" class="menu-list-to footer-list-to"
                                     data-title="Contact Us">
                                     <span data-title="Contact Us"> Contact Us</span>
                                 </a>
@@ -545,7 +545,7 @@
     </a>
 
     <!--== Optional JavaScript ==-->
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!--== jQuery first, then Popper.js, then Bootstrap JS ==-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
