--- a/gallery.html
+++ b/gallery.html
@@ -29,11 +29,11 @@
 
 
     <!--== CSS fayls  ==-->
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/gallery.css">
-    <link rel="stylesheet" href="../css/animation.css">
-    <link rel="stylesheet" href="../css/crumbs.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/crumbs.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -98,7 +98,7 @@
     <section id="meniu-bar" class="sticky-menu">
         <div class="meniu-nav">
             <div class="logo">
-                <a href="../html/index.html"><img src="../img/logo.png" alt="">
+                <a href="./index.html"><img src="./img/logo.png" alt="">
                     <span>PathSoft</span>
                 </a>
             </div>
@@ -106,43 +106,43 @@
             <div class="meniu-item">
                 <ul>
                     <li>
-                        <a href="../html/index.html" class="menu-list-to" data-title="Home">
+                        <a href="./index.html" class="menu-list-to" data-title="Home">
                             <span data-title="Home"> Home</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/about.html" class="menu-list-to" data-title="About Us">
+                        <a href="./about.html" class="menu-list-to" data-title="About Us">
                             <span data-title="About Us">About Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/services.html" class="menu-list-to" data-title="Services">
+                        <a href="./services.html" class="menu-list-to" data-title="Services">
                             <span data-title="Services"> Services</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/blog.html" class="menu-list-to" data-title="News">
+                        <a href="./blog.html" class="menu-list-to" data-title="News">
                             <span data-title="News">News </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/gallery.html" class="menu-list-to" data-title="Gallery">
+                        <a href="./gallery.html" class="menu-list-to" data-title="Gallery">
                             <span data-title="Gallery">Gallery </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/contact.html" class="menu-list-to" data-title="Contact Us">
+                        <a href="./contact.html" class="menu-list-to" data-title="Contact Us">
                             <span data-title="Contact Us">Contact Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/login.html" class="menu-list-to" data-title="Login">
+                        <a href="./login.html" class="menu-list-to" data-title="Login">
                             <span data-title="Login"> Login</span>
                             <i class=""></i>
                         </a>
@@ -169,7 +169,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-auto">
                     <div class="crumbs-info">
-                        <span class="crumbs-home"><a href="../html/index.html">Home</a></span> <i class="fas fa-angle-right"></i>
+                        <span class="crumbs-home"><a href="./index.html">Home</a></span> <i class="fas fa-angle-right"></i>
                         <span class="crumbs-about">Gallery</span>
                     </div>
                 </div>
@@ -202,55 +202,55 @@
             <div class="row">
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item ">
-                        <img class="image-animation" src="../img/gallery-img-1.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-1.jpg" alt="">
                         <div class="gallery-item-caption"><span>Corporate Solution</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-2.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-2.jpg" alt="">
                         <div class="gallery-item-caption"><span>IOS/MacOS Apps</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-3.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-3.jpg" alt="">
                         <div class="gallery-item-caption"><span>Cloud Development</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-4.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-4.jpg" alt="">
                         <div class="gallery-item-caption"><span>IOS/MacOS Apps</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-5.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-5.jpg" alt="">
                         <div class="gallery-item-caption"><span>Android Applications</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-6.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-6.jpg" alt="">
                         <div class="gallery-item-caption"><span>UX And Design</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-7.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-7.jpg" alt="">
                         <div class="gallery-item-caption"><span>Corporate Solution</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-8.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-8.jpg" alt="">
                         <div class="gallery-item-caption"><span>UX And Design</span></div>
                     </a>
                 </div>
                 <div class="col-4 col-margin animation">
                     <a href="#!" class="gallery-item">
-                        <img class="image-animation" src="../img/gallery-img-9.jpg" alt="">
+                        <img class="image-animation" src="./img/gallery-img-9.jpg" alt="">
                         <div class="gallery-item-caption"><span>IOS/MacOS Apps</span></div>
                     </a>
                 </div>
@@ -267,7 +267,7 @@
                 <div class="col-4">
                     <div class="footer-item">
                         <div class="logo">
-                            <a href="../html/index.html"><img src="../img/logo.png" alt="LOGO PathSoft">
+                            <a href="./index.html"><img src="./img/logo.png" alt="LOGO PathSoft">
                                 <span><b>PathSoft</b></span></a>
                         </div>
                         <div class="company-info">
@@ -296,28 +296,28 @@
                         <h4>Menu</h4>
                         <ul class="company-footer-meniu">
                             <li>
-                                <a href="../html/about.html" class="menu-list-to footer-list-to" data-title="About Us">
+                                <a href="./about.html" class="menu-list-to footer-list-to" data-title="About Us">
                                     <span data-title="About Us"> About Us</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/services.html" class="menu-list-to footer-list-to"
+                                <a href="./services.html" class="menu-list-to footer-list-to"
                                     data-title="Services">
                                     <span data-title="Services"> Services</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
+                                <a href="./team.html" class="menu-list-to footer-list-to" data-title="Our Team">
                                     <span data-title="Our Team"> Our Team</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/blog.html" class="menu-list-to footer-list-to" data-title="News">
+                                <a href="./blog.html" class="menu-list-to footer-list-to" data-title="News">
                                     <span data-title="News"> News</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/contact.html" class="menu-list-to footer-list-to"
+                                <a href="./contact.html" class="menu-list-to footer-list-to"
                                     data-title="Contact Us">
                                     <span data-title="Contact Us"> Contact Us</span>
                                 </a>
@@ -424,7 +424,7 @@
     <a href="#geriqayt" class="geriqayt">
         <i class="material-icons"> east</i>
     </a>
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!--== Optional JavaScript ==-->
     <!--== jQuery first, then Popper.js, then Bootstrap JS ==-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
