--- a/testimonials.html
+++ b/testimonials.html
@@ -29,11 +29,11 @@
 
 
     <!--== CSS fayls  ==-->
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/testimonials.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <link rel="stylesheet" href="../css/crumbs.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/testimonials.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/crumbs.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -98,7 +98,7 @@
     <section id="meniu-bar" class="sticky-menu">
         <div class="meniu-nav">
             <div class="logo">
-                <a href="../html/index.html"><img src="../img/logo.png" alt="">
+                <a href="./index.html"><img src="./img/logo.png" alt="">
                     <span>PathSoft</span>
                 </a>
             </div>
@@ -106,43 +106,43 @@
             <div class="meniu-item">
                 <ul>
                     <li>
-                        <a href="../html/index.html" class="menu-list-to" data-title="Home">
+                        <a href="./index.html" class="menu-list-to" data-title="Home">
                             <span data-title="Home"> Home</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/about.html" class="menu-list-to" data-title="About Us">
+                        <a href="./about.html" class="menu-list-to" data-title="About Us">
                             <span data-title="About Us">About Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/services.html" class="menu-list-to" data-title="Services">
+                        <a href="./services.html" class="menu-list-to" data-title="Services">
                             <span data-title="Services"> Services</span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/blog.html" class="menu-list-to" data-title="News">
+                        <a href="./blog.html" class="menu-list-to" data-title="News">
                             <span data-title="News">News </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/gallery.html" class="menu-list-to" data-title="Gallery">
+                        <a href="./gallery.html" class="menu-list-to" data-title="Gallery">
                             <span data-title="Gallery">Gallery </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/contact.html" class="menu-list-to" data-title="Contact Us">
+                        <a href="./contact.html" class="menu-list-to" data-title="Contact Us">
                             <span data-title="Contact Us">Contact Us </span>
                             <i class=""></i>
                         </a>
                     </li>
                     <li>
-                        <a href="../html/login.html" class="menu-list-to" data-title="Login">
+                        <a href="./login.html" class="menu-list-to" data-title="Login">
                             <span data-title="Login"> Login</span>
                             <i class=""></i>
                         </a>
@@ -170,7 +170,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-auto">
                     <div class="crumbs-info">
-                        <span class="crumbs-home"><a href="../html/index.html">Home</a></span> <i
+                        <span class="crumbs-home"><a href="./index.html">Home</a></span> <i
                             class="fas fa-angle-right"></i>
                         <span class="crumbs-about">Testimonials</span>
                     </div>
@@ -239,7 +239,7 @@
                 <div class="col-12 team-box">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-1.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-1.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Catherine Williams</h4>
                                 <p>Regular client</p>
@@ -254,7 +254,7 @@
                 <div class="col-12 team-box">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-2.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-2.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Rupert Wood</h4>
                                 <p>Regular client</p>
@@ -270,7 +270,7 @@
                 <div class="col-12 team-box">
                     <div class="client-item">
                         <div class="client-title">
-                            <div class="client-img"><img src="../img/auth-img-3.jpg" alt=""></div>
+                            <div class="client-img"><img src="./img/auth-img-3.jpg" alt=""></div>
                             <div class="client-name">
                                 <h4>Samantha Brown</h4>
                                 <p>Regular client</p>
@@ -301,7 +301,7 @@
                 <div class="col-4">
                     <div class="footer-item">
                         <div class="logo">
-                            <a href="../html/index.html"><img src="../img/logo.png" alt="LOGO PathSoft">
+                            <a href="./index.html"><img src="./img/logo.png" alt="LOGO PathSoft">
                                 <span><b>PathSoft</b></span></a>
                         </div>
                         <div class="company-info">
@@ -329,28 +329,28 @@
                         <h4>Menu</h4>
                         <ul class="company-footer-meniu">
                             <li>
-                                <a href="../html/about.html" class="menu-list-to footer-list-to" data-title="About Us">
+                                <a href="./about.html" class="menu-list-to footer-list-to" data-title="About Us">
                                     <span data-title="About Us"> About Us</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/services.html" class="menu-list-to footer-list-to"
+                                <a href="./services.html" class="menu-list-to footer-list-to"
                                     data-title="Services">
                                     <span data-title="Services"> Services</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/team.html" class="menu-list-to footer-list-to" data-title="Our Team">
+                                <a href="./team.html" class="menu-list-to footer-list-to" data-title="Our Team">
                                     <span data-title="Our Team"> Our Team</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/blog.html" class="menu-list-to footer-list-to" data-title="News">
+                                <a href="./blog.html" class="menu-list-to footer-list-to" data-title="News">
                                     <span data-title="News"> News</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="../html/contact.html" class="menu-list-to footer-list-to"
+                                <a href="./contact.html" class="menu-list-to footer-list-to"
                                     data-title="Contact Us">
                                     <span data-title="Contact Us"> Contact Us</span>
                                 </a>
